--- a/css/styles.css
+++ b/css/styles.css
@@ -50,11 +50,21 @@ a {
 .logo-web {
   color: var(--accent-color);
   font-family: Raleway, sans-serif;
+
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
 }
 
 .logo-studio {
   font-family: Raleway, sans-serif;
   color: var(--white);
+
+  font-weight: bold;
+  font-size: 26px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
 }
 
 .list {
